--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="error">Error</string>
     <string name="about">About App</string>
     <string name="alert">Alert</string>
+    <string name="status_network_issue">Connection Unavailable</string>
 </resources>
